test_regress/t/t_property_sexpr_unsup.out
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:45:44: Unsupported: 'until' in complex property expression
                                                    : ... note: In instance 't'
   45 |   assert property (@(posedge clk) ##1 (val until val)) $display("[%0t] until in sequence, fileline:%d", $time, 45);
      |                                            ^~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:49:39: Unsupported: 'until' in complex property expression
                                                    : ... note: In instance 't'
   49 |   assert property (@(posedge clk) val until (val ##1 val)) $display("[%0t] sequence in until, fileline:%d", $time, 49);
      |                                       ^~~~~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:55:57: Unsupported: 'until' in complex property expression
                                                    : ... note: In instance 't'
   55 |   assert property (@(posedge clk) (val ##1 val) |=> val until val) $display("[%0t] until on implication consequent, fileline:%d", $time, 55);
      |                                                         ^~~~~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:57:57: Unsupported: 'until_with' in complex property expression
                                                    : ... note: In instance 't'
   57 |   assert property (@(posedge clk) (val ##1 val) |=> val until_with val) $display("[%0t] until_with on implication consequent, fileline:%d", $time, 57);
      |                                                         ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:59:57: Unsupported: s_until in complex property expression
                                                    : ... note: In instance 't'
   59 |   assert property (@(posedge clk) (val ##1 val) |=> val s_until val) $display("[%0t] s_until on implication consequent, fileline:%d", $time, 59);
      |                                                         ^~~~~~~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:61:57: Unsupported: s_until_with in complex property expression
                                                    : ... note: In instance 't'
   61 |   assert property (@(posedge clk) (val ##1 val) |=> val s_until_with val) $display("[%0t] s_until_with on implication consequent, fileline:%d", $time, 61);
      |                                                         ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:47:49: Unsupported: 'until' in complex property expression
                                                    : ... note: In instance 't'
   47 |   assert property (@(posedge clk) val until val until val) $display("[%0t] nested until, fileline:%d", $time, 47);
      |                                                 ^~~~~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:51:39: Unsupported: s_until (in property expresion)
                                                    : ... note: In instance 't'
   51 |   assert property (@(posedge clk) val s_until !val) $display("[%0t] s_until, fileline:%d", $time, 51);
      |                                       ^~~~~~~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:53:39: Unsupported: s_until_with (in property expresion)
                                                    : ... note: In instance 't'
   53 |   assert property (@(posedge clk) val s_until_with val) $display("[%0t] s_until_with, fileline:%d", $time, 53);
      |                                       ^~~~~~~~~~~~
%Error: Exiting due to
